--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <HTML>
-<BODY bgcolor=pink>
+<BODY bgcolor=blue>
   <h1>Hi everyone-->>Welcome to maven Class<h1><br>
   <a href="login.html">Login</a><br>
   <a href="register.html">Register</a><br>
