--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <BODY bgcolor=blue>
-  <h1>Hi everyone-->>Welcome to maven Class student<h1><br>
+  <h1>Hi everyone-->>Hello World<h1><br>
   <a href="login.html">Login</a><br>
   <a href="register.html">Register</a><br>
 </BODY>
