modified in index file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,12 +1,12 @@
 <HTML>
-<BODY bgcolor=pink>
+<BODY bgcolor=orange>
 <form action="action_page.php">
   <div class="container">
     <h1>New user Register</h1>
     <p>Please fill in this form to create an account.</p>
     <br>
 
-    <label for="name"><b>Email</b></label>
+    <label for="name"><b>name</b></label>
     <input type="text" placeholder="Enter Email" name="email" id="email" required>
     <br>
     <label for="psw"><b>Password</b></label>
