--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <BODY bgcolor=orange>
 <form action="action_page.php">
   <div class="container">
-    <h1>New user Register</h1>
+    <h1>New User Register</h1>
     <p>Please fill in this form to create an account.</p>
     <br>
 
