changed to yellow color

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <HTML>
-<BODY bgcolor=pink>
+<BODY bgcolor=yellow>
 <form action="action_page.php">
   <div class="container">
     <h1>New User Register</h1>
